# waryme

./: .gitignore  pyproject.toml  rename.ipynb  rename.py  scrap.py  scrap_last_week_old.py  scrap_playwright.py  scrap_plw.py  utils.py
rename_tests/: Alertes_2024-12_extrait.csv  merge_csv_by_month.py  rename.py  rename_0.py  rename_monthly_light.py  rename_monthly_old.py  rename_monthly_pandas.py  rename_monthly_sans_accent.py  rename_probleme.py
run/: run_scrap.PS1  run_scrap.bat  run_scrap.py  run_scrap.sh
scrap_tests/: scrap_custom_week.py  scrap_last_week.py  test_dates.py
