[project]
name = "rtm-waryme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "selenium>=4.35.0",
]
